# decoding

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py  cleanup.py  estimate.py  gen.py  hugepages.sh  main.cpp  main.h  setup.sh  shell.nix
.github/workflows/: arm.yml  cmake.yml  osx-x86.yml  test.yml
bench/: CMakeLists.txt  add_only_upper_weight.cpp  avx_operations.cpp  matrix_apply_random_permutation.cpp  matrix_m4ri.cpp  row_column_operations.cpp  ternary_transpose.cpp
cmake/: FindTCMalloc.cmake
decoding/: __init__.py  matrix.py  optimize.py
src/: bjmm.h  bjmm_classicaltree.h  bjmm_d3.h  bjmm_hybridtree.h  bjmm_nn.h  bkw.h  decoding.h  dumer.h  emz.h  isd.h  leebrickell.h  list_check.h  list_fill.h  list_generator.h  mitm.h  pollard.h  prange.h  sparsity.h  stern.h  stern_im.h  stern_mo.h
src/fq/: prange.h  sieving.h  stern.h  stern_v2.h
src/rust/: Cargo.toml
src/rust/benches/: prange.rs
src/rust/examples/: chase.rs  chaseVV.rs  prange.rs  prange_cuda.rs  radixsort.rs
src/rust/src/: chase.rs  chase2.rs  hashmap.rs  instance.rs  lib.rs  radixsort.rs
test/: CMakeLists.txt  sparsity.cpp  test.h
test/decoding/: CMakeLists.txt  test_510.cpp  test_decoding.cpp  test_mitm.cpp  test_mitm10.cpp  test_mitm100.cpp  test_mitm200_d1.cpp  test_mitm_l0.cpp  test_mmt100.cpp
test/decoding/challenges/: 200.h  500.h  510.h
test/lowweight/: CMakeLists.txt  test_bjmm.cpp
test/lowweight/challenges/: lw0.h
test/mceliece/: CMakeLists.txt  test_1161.cpp  test_156.cpp  test_240.cpp  test_286.cpp  test_431.cpp  test_640.cpp  test_approximate_156.cpp  test_approximate_240.cpp  test_bjmm1161.cpp  test_bjmm1223.cpp  test_bjmm1284.cpp  test_bjmm1284_backdoor.cpp  test_bjmm240.cpp  test_bjmm240_t2.cpp  test_bjmm431.cpp  test_bjmm431_t2.cpp  test_bjmm640.cpp  test_bjmm640_t2.cpp  test_bjmm865.cpp  test_d1_156.cpp  test_d1_640.cpp  test_d2_1161.cpp  test_d2_156.cpp  test_d2_240.cpp  test_d2_286.cpp  test_d2_431.cpp  test_d2_640.cpp  test_d2_695.cpp  test_d2_982.cpp  test_dumer240.cpp  test_pollard240.cpp  test_pollard431.cpp  test_pollard640.cpp
test/mceliece/challenges/: mce1041.h  mce1223.h  mce1284.h  mce1284b.h  mce1347.h  mce1536.h  mce1600.h  mce1730.h  mce1995.h  mce286.h  mce431.h  mce431_v2.h  mce534.h  mce751.h  mce808.h  mce982.h  mce982_v2.h
test/quasicyclic/: CMakeLists.txt  test_10.cpp  test_12.cpp  test_14.cpp  test_14transformed.cpp  test_16.cpp  test_16transformed.cpp  test_18.cpp  test_20.cpp  test_22.cpp  test_24.cpp  test_26.cpp  test_28.cpp  test_28transformed.cpp  test_30.cpp  test_32.cpp  test_34.cpp  test_36.cpp  test_38.cpp  test_40.cpp  test_42.cpp  test_44.cpp  test_46.cpp  test_48.cpp  test_50.cpp
test/quasicyclic/challenges/: qc10.h  qc12.h  qc14.h  qc14transformed.h  qc16.h  qc16transformed.h  qc18.h  qc20.h  qc22.h  qc24.h  qc26.h  qc28.h  qc28transformed.h  qc30.h  qc32.h  qc34.h  qc36.h  qc38.h  qc40.h  qc42.h  qc44.h  qc46.h  qc48.h  qc50.h  qc52.h
test/ternary/: CMakeLists.txt  test_mmt100.cpp  test_mmt120.cpp  test_mmt160.cpp  test_mmt20.cpp  test_mmt40.cpp  test_mmt40_t2.cpp  test_mmt60.cpp  test_mmt80.cpp  test_mmt90.cpp  test_prange.cpp
test/ternary/challenges/: t100transformed.h  t150transformed.h  t160transformed.h  t180transformed.h  t20transformed.h  t40transformed.h
tests/: CMakeLists.txt  isd.cpp  mitm.cpp
tests/decoding/: CMakeLists.txt
tests/decoding/challenges/: 10.h  100.h  300.h  520.h
tests/decoding/stern/: 100.cpp  200.cpp  300.cpp  CMakeLists.txt
tests/fq/: CMakeLists.txt
tests/fq/challenges/: 50_20_4.h
tests/fq/challenges/ternary/: t10.h  t10transformed.h  t110transformed.h  t120transformed.h  t130transformed.h  t140transformed.h  t170transformed.h  t190transformed.h  t200transformed.h  t210transformed.h  t220transformed.h  t230transformed.h  t240transformed.h  t250transformed.h  t50transformed.h  t60transformed.h  t70transformed.h  t80transformed.h  t90transformed.h  wave100transformed.h  wave110transformed.h  wave120transformed.h  wave130transformed.h  wave140transformed.h  wave150transformed.h  wave160transformed.h  wave170transformed.h  wave180transformed.h  wave190transformed.h  wave200transformed.h  wave210transformed.h  wave220transformed.h  wave230transformed.h  wave240transformed.h  wave250transformed.h  wave40transformed.h  wave50transformed.h  wave60transformed.h  wave70transformed.h  wave80transformed.h  (+1 more)
tests/fq/prange/: 50.cpp  CMakeLists.txt
tests/fq/sieving/: 50.cpp  CMakeLists.txt
tests/fq/stern/: 50.cpp  CMakeLists.txt
tests/mceliece/: CMakeLists.txt
tests/mceliece/bjmm/: 1284.cpp  240.cpp  431.cpp  640.cpp  CMakeLists.txt
tests/mceliece/challenges/: mce1101.h  mce1161.h  mce1347b.h  mce1347b_14.h  mce1347b_perm.h  mce1409.h  mce1473.h  mce156.h  mce1665.h  mce1796.h  mce240.h  mce3036.h  mce333.h  mce381.h  mce431.h  mce482.h  mce640.h  mce695.h  mce865.h  mce923.h
tests/mceliece/prange/: 240.cpp  431.cpp  CMakeLists.txt
tests/mceliece/stern/: 1284.cpp  240.cpp  431.cpp  640.cpp  CMakeLists.txt
